# coding-challenges

./: README.md
WebTECS/: Makefile  common.js  vm2asm.js
WebTECS/grammars/: jack.waxeye  vm.waxeye
WebTECS/parsers/: jack_parser.js  vm_parser.js
WebTECS/test/: simplepush.vm
brainfuck-rs/: Cargo.toml  README.md  STACK.md  mandelbrot.bf
brainfuck-rs/src/: main.rs  vm.rs
brix-vm/: .eslintrc.json  README.md  jest.config.json  package-lock.json  package.json  tsconfig.json
brix-vm/.github/workflows/: test.yaml
brix-vm/src/: brix.ts  design.ts  futamura.ts  instructions.scm  instructions.ts  test.spec.ts
broken-links/: .gitignore  Cargo.toml  DEVLOG.md  README.md
broken-links/src/: link_scanner.rs  main.rs  monitor.rs  page_scanner.rs  url_utils.rs
dcpu16-lisp/: README.md
deduplicator/: .gitignore  Cargo.toml  README.md
deduplicator/src/: main.rs
deduplicator/test/: d  e
factory-sim/: README.md  factory.py  pyproject.toml
large-files/: README.md  gen-test-data.py  go.mod  go.sum  main.go
large-files/tests/: AllNaN-in.csv  NaNNeighbours-in.csv  simple-in.csv  simple-out.csv
mdlocal/: Cargo.toml  README.md
mdlocal/src/: main.rs
mdlocal/tests/: simple.md
mdlocaljs/: .gitignore  README.md  index.js  package-lock.json  package.json
net-modeller/: Cargo.toml  LICENSE_MIT  README.md
net-modeller/.github/: dependabot.yml
net-modeller/src/: lib.rs  main.rs
noise/: Cargo.toml  README.md
press/: .gitignore  Cargo.toml  README.md
press/src/: huffman.rs  main.rs
press/tests/: test-100kB.txt  test-10kB.txt  test-1kB.txt  test-1mB.txt  test-2kB.txt  test-3kB.txt  test-fail-decode.txt
wc/: Cargo.toml  README.md
wc/src/: main.rs
