[package]
name = "blf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = "4.4.18"
fantoccini = "0.19.3"
failure = "0.1.8"
headless_chrome = { version = "1.0.9", features = ["fetch"] }
tokio = { version = "1.36.0", features = ["time", "full"] }
url = "2.5.0"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
