[package]
name = "dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
crc = "3.0.1"
dialoguer = "0.11.0"
walkdir = "2.4.0"
xxhash-rust = { version = "0.8.8", features = ["xxh3", "const_xxh3"] }
