[tool.poetry]
name = "factory-sim"
version = "0.1.0"
description = "A factory simulation"
authors = ["Brice Fernandes <brice@fractallambda.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
python-statemachine = {version="^2.3.1", extras=["diagrams"]}
pydot = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
