[package]
name = "press"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
bimap = { version = "0.6.3", features = ["serde"] }
bitvec = { version = "1.0.1", features = ["serde"] }
clap = "4.4.14"
serde = { version = "1.0.195", features = ["derive"] }
